force-app/main/default/objects/Student0__c/Student0__c.object-meta.xml
<CustomObject>
    <description>To Create and Store Student Details</description>
    <label>Student0</label>
    <nameField>
        <label>Student0 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students0</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>