force-app/main/default/objects/Student0__c/fields/Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Current_Year__c</fullName>
    <label>Year of Study</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>II</fullName>
            </value>
            <value>
                <fullName>III</fullName>
            </value>
            <value>
                <fullName>IV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>