force-app/main/default/objects/Student0__c/fields/Student_Email__c.field-meta.xml
<CustomField>
    <fullName>Student_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Student Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>