force-app/main/default/objects/Student0__c/fields/Student_ID__c.field-meta.xml
<CustomField>
    <fullName>Student_ID__c</fullName>
    <label>Student-ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>