force-app/main/default/objects/Student0__c/validationRules/Phone_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_Validation</fullName>
    <active>true</active>
    <description>Phone number must contain exactly 10 digits.</description>
    <errorConditionFormula>LEN( Mobile_No__c )&lt;&gt;10</errorConditionFormula>
    <errorDisplayField>Mobile_No__c</errorDisplayField>
    <errorMessage>Phone Number must contain exactly 10 digits.</errorMessage>
</ValidationRule>