force-app/main/default/objects/Student0__c/validationRules/Student_ID_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Student_ID_Required</fullName>
    <active>true</active>
    <description>Student ID cannot be blank.</description>
    <errorConditionFormula>ISBLANK( Student_ID__c )</errorConditionFormula>
    <errorDisplayField>Student_ID__c</errorDisplayField>
    <errorMessage>Student ID cannot be blank.</errorMessage>
</ValidationRule>