force-app/main/default/objects/Student0__c/validationRules/Student_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Student_Name_Required</fullName>
    <active>true</active>
    <description>Student Name should not be blank.</description>
    <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Student Name cannot be blank.</errorMessage>
</ValidationRule>